# realbench

./: .dockerignore  .eslintrc.cjs  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README.md  SETUP.md  SPEC.md  STATUS.md  fly.api.toml  fly.web.toml  fly.worker.toml  package.json  pnpm-lock.yaml
.github/workflows/: build-images.yml  ci.yml  deploy-production.yml
action/: README.md  realbench-action.yml
apps/api/: .env.example  AGENTS.md  drizzle.config.ts  fly.toml  fly.worker.toml  package.json  tsconfig.json
apps/api/drizzle/: 0000_blushing_colleen_wing.sql  0001_add_error_field.sql  0002_add_profiling_mode_fields.sql  0003_tricky_wither.sql  0004_fat_diamondback.sql  0005_elite_daredevil.sql  0006_confused_tana_nile.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
apps/api/src/: index.ts  types.ts
apps/api/src/db/: index.ts  migrate.ts  schema.ts
apps/api/src/middleware/: auth.ts  validate.ts
apps/api/src/routes/: api-keys.ts  profile.ts  projects.ts  runs.ts  waitlist.ts
apps/api/src/services/: binary-analyzer.ts  github.ts  llm.ts  profiler.ts  source-extractor.ts  storage.ts  user.ts
apps/api/src/workers/: queue.ts  (+1 more)
apps/web/: .env.example  .eslintrc.cjs  AGENTS.md  Dockerfile  LICENSE  fly.toml  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
docker/: Dockerfile.api  Dockerfile.worker  start-api.sh
lib/profiler/: AGENTS.md  CMakeLists.txt  LEHRBUCH_1_Grundlagen.md  LEHRBUCH_2_Kern.md  LEHRBUCH_3_NodeJS.md  LICENSE  README.md  binding.gyp  index.js  package.json  profiler_worker.js
lib/profiler/bindings/: CMakeLists.txt  node_addon.cpp
lib/profiler/include/: profiler.h
lib/profiler/src/: diff.cpp  flamegraph.cpp  sampler.cpp  symbol_resolver.cpp
lib/profiler/tests/: CMakeLists.txt  Dockerfile.crosscompile  README.md  algorithmic_complexity.cpp  build_native.sh  build_sample_binary.sh  build_sample_binary_go.sh  build_sample_binary_rs.sh  compile_and_test.sh  cpu_intensive.cpp  crosscompile.sh  memory_allocation.cpp  multithreading.cpp  sample_binary  sample_binary.cpp  sample_binary.go  sample_binary.rs  sample_binary_debug  sample_binary_go  test_profiler.cpp
lib/profiler/tests/linux-binaries/: algorithmic_complexity  cpu_intensive  memory_allocation  multithreading
scripts/: fly-deploy.sh
(+13 files in other folders)
